argocd/manifests/media-services/jellystat/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellystat
  namespace: media-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellystat
  template:
    metadata:
      labels:
        app: jellystat
    spec:
      containers:
        - name: jellystat
          image: cyfershepard/jellystat:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: jellystat-data
              subPath: config/jellystat
              mountPath: /app/backend/backup-data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: jellystat-data
          hostPath:
            path: /var/lib/jellystat
            type: DirectoryOrCreate
