argocd/manifests/media-services/jellystat/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellystat-db
  namespace: media-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellystat-db
  template:
    metadata:
      labels:
        app: jellystat-db
    spec:
      containers:
        - name: postgres
          image: postgres:15.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: postgres-data
          hostPath:
            path: /var/lib/postgresql
            type: DirectoryOrCreate
