argocd/manifests/media-services/jellystat/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellystat-db
  namespace: media-system
spec:
  selector:
    app: jellystat-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jellystat
  namespace: media-system
spec:
  selector:
    app: jellystat
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
